[project]
name = "logger-service-python"
version = "1.0.5"
description = "Python Logger service with multiple handlers integrations"
authors = [
    {name = "Bakstyx",email = "bakstyx.012@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "sqlalchemy (>=2.0.43,<3.0.0)",
    "loki-logger-handler (>=1.1.2,<2.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "requests (>=2.32.5,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
line-length = 88
select = ["E", "F", "W", "C90", "B", "B9", "I", "Q"]
ignore = ["E501", "E203"]
exclude = ["node_modules", ".venv", "venv", "__pycache__"]
per-file-ignores = { "__init__.py" = ["F401"] }
fix = true
target-version = "py313"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.1.1"
ruff = "^0.15.1"


[tool.poetry]
name = "logger-service-python"
version = "1.0.5"
description = "Python Logger service with multiple handlers integrations"
authors = ["Bakstyx bakstyx.012@gmail.com"]
packages = [{ include = "logger_system", from = "src" }]